--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="StyleSheet1.css" />
+    <link rel="stylesheet" href="style.css" />
     <title></title>
 </head>
 <body>
@@ -79,7 +79,7 @@
     </div>
 
     <div class="container4white">
-        <div class="OurProduct"><center>Our Product</center></div>
+        <div class="OurProduct" style="text-align:center">Our Product</div>
         <div class="menu">
             <div2><a href=" ">ICE CREAM</a></div2>
             <div3><a href=" ">CAYENNE CHOCOLATE</a></div3>
